tests/mvar/reject/nested_blocks.nos
# expect: error
# Mvar access in nested blocks with call to mvar function

mvar counter: Int = 0

increment() = {
    counter = counter + 1
    counter
}

nested() = {
    # UNSAFE: reads counter in outer block, calls increment in inner block
    x = counter
    result = {
        y = {
            increment()
        }
        y
    }
    result + x
}

main() = {
    nested()
}
